# SolanaSuper

./: .gitignore  README.md  build.gradle.kts  rewrite_git_history.sh  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/.tmp.driveupload/: 100048  100120  100130  100136  100138  100142  100160  100178  100184  100186  100194  100196  100202  100206  100208  100214  100218  100230  100234  100236  100240  100248  100250  100256  100270  100276  100286  100296  100300  100304  100310  100314  100316  100324  100330  100336  100342  100370  100372  100380  (+2436 more)
app/src/androidTest/java/com/solanasuper/core/: GovernanceTest.kt  ZKProverTest.kt
app/src/androidTest/java/com/solanasuper/data/: HealthDatabaseTest.kt  SecureHealthDatabaseTest.kt  WalletDatabaseTest.kt
app/src/androidTest/java/com/solanasuper/security/: IdentityKeyManagerTest.kt
app/src/androidTest/java/com/solanasuper/ui/: MainNavigationTest.kt
app/src/androidTest/java/com/solanasuper/ui/health/: HealthScreenTest.kt
app/src/androidTest/java/com/solanasuper/ui/income/: IncomeScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build_rust.sh  stub.cpp
app/src/main/cpp/rust/: Car.toml  Cargo.toml  build.rs
app/src/main/cpp/rust/.cargo/: config.toml
app/src/main/cpp/rust/src/: lib.rs
app/src/main/java/com/solanasuper/: MainActivity.kt
app/src/main/java/com/solanasuper/core/: ZKProver.kt
app/src/main/java/com/solanasuper/data/: ActivityLogDao.kt  ActivityLogEntity.kt  ActivityRepository.kt  Converters.kt  HealthDao.kt  HealthDatabase.kt  HealthEntity.kt  HealthRecord.kt  HealthRepository.kt  InvestDao.kt  InvestPosition.kt  NonceAccount.kt  NonceAccountDao.kt  OfflineCommitment.kt  OfflineTransaction.kt  TransactionDao.kt  TransactionStatus.kt  WalletBalance.kt  WalletDao.kt  WalletDatabase.kt
app/src/main/java/com/solanasuper/network/: IpfsUploader.kt  MockArciumClient.kt  NetworkManager.kt  P2PTransferManager.kt  SolanaSyncWorker.kt
app/src/main/java/com/solanasuper/p2p/: TransactionManager.kt
app/src/main/java/com/solanasuper/security/: BiometricPromptManager.kt  IdentityKeyManager.kt  KeyManager.kt
app/src/main/java/com/solanasuper/ui/: MainNavigation.kt  WelcomeScreen.kt
app/src/main/java/com/solanasuper/ui/components/: MpcLoadingOverlay.kt  PremiumBackground.kt  QrScanner.kt
app/src/main/java/com/solanasuper/ui/governance/: GovernanceScreen.kt  GovernanceViewModel.kt
app/src/main/java/com/solanasuper/ui/health/: DecryptedHealthRecord.kt  HealthScreen.kt  HealthState.kt  HealthViewModel.kt
app/src/main/java/com/solanasuper/ui/identity/: IdentityHubScreen.kt
app/src/main/java/com/solanasuper/ui/income/: IncomeScreen.kt  IncomeState.kt  IncomeViewModel.kt  P2PStatus.kt  UiTransaction.kt
app/src/main/java/com/solanasuper/ui/invest/: InvestScreen.kt  InvestViewModel.kt
app/src/main/java/com/solanasuper/ui/profile/: ProfileScreen.kt  ProfileViewModel.kt
app/src/main/java/com/solanasuper/ui/state/: ArciumComputationState.kt
app/src/main/java/com/solanasuper/utils/: AppLogger.kt  BIP39.kt  Base58.kt  DurableNonceManager.kt  JupiterSwapUtil.kt  PriceAndPerpUtil.kt  SolanaUtil.kt
app/src/main/java/com/solanasuper/worker/: NetworkSyncWorker.kt
app/src/main/proto/: enclave.proto
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_sovereign_logo.xml
app/src/main/res/values/: colors.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/solanasuper/core/: ZKProverTest.kt
app/src/test/java/com/solanasuper/p2p/: TransactionManagerTest.kt
app/src/test/java/com/solanasuper/security/: KeyManagerTest.kt
gradle/: libs.versions.toml
website/: package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
